--- a/visceral.html
+++ b/visceral.html
@@ -22,12 +22,15 @@
     <div class="side_nav_item" id="collegebacker">collegebacker</div>
     <div class="side_nav_item" id="tesla">tesla</div>
     <div class="side_nav_item" id="orai">orai</div>
+    <div class="side_nav_item" id="cabinet">cabinet</div> 
     <br><br>
     <div class="side_nav_item" id="resume" style="text-decoration: underline;">resume</div>
   </div>
     <br><br>
   	<h2 class="subtitle">overview</h2>
-  	<p class="content">The UX team at Visceral consisted of two full-time motion graphics/designers, four engineers, a QA engineer, and a product manager. Throughout my time there, I worked most closely with the two other designers to create motion mock ups, and UI. </p>
+  	<p class="content">EA Visceral was a video game studio under the publisher Electronic Arts (EA). They specialized in third-person AAA games. In the summer of 2016 and from May-October of 2017, I interned as a UX/UI Design intern on their UX team. Throughout my time there, I worked on an undisclosed Star Wars game for console devices. In October 2017, EA shut down the studio and I was relocated to their Maxis studio.
+
+    The UX team at Visceral consisted of two full-time motion graphics/designers, four engineers, a QA engineer, and a product manager. Throughout my time there, I worked most closely with the two other designers to create motion mock ups, and UI. </p>
   	<h2 class="subtitle">fictional UI</h2>
   	<p class="content">These screens were mock-ups for a new spaceship that was hijacked by the game protagonists from Imperial forces. As such, I looked to elements from the Star Wars Empire for inspiration for the interface elements and design.</p>
   	<img class="visuals" src="Work_Documentation/Mongoose.png">
@@ -52,6 +55,7 @@
     var tesla = GetElementInsideContainer("side_nav","tesla");
     var maxis = GetElementInsideContainer("side_nav","maxis");
     var orai = GetElementInsideContainer("side_nav","orai");
+    var cabinet = GetElementInsideContainer("side_nav","cabinet");
 
     var projectPath = window.location.pathname.replace('/', '')
 
@@ -70,6 +74,9 @@
         break
       case 'maxis.html':
         maxis.style.fontWeight = 'bolder'
+        break
+      case 'cabinet.html':
+        cabinet.style.fontWeight = 'bolder'
         break
       case 'orai.html':
         orai.style.fontWeight = "bolder"
@@ -93,6 +100,8 @@
   var maxis = GetElementInsideContainer("side_nav","maxis");
   var collegebacker = GetElementInsideContainer("side_nav","collegebacker");
   var orai = GetElementInsideContainer("side_nav","orai");
+  var cabinet = GetElementInsideContainer("side_nav","cabinet");
+
 
     home.onclick = function () {
       location.href = "index.html";
@@ -108,7 +117,10 @@
     };
     orai.onclick = function (){
       location.href = "orai.html";
-    }
+    };
+    cabinet.onclick = function (){
+      location.href = "cabinet.html";
+    };
     resume.onclick = function() {
       location ="https://www.dropbox.com/s/sdbqeb9p5i5b4wf/Resume_MelodyTing.pdf?dl=0"
     }
