--- a/collegebacker.html
+++ b/collegebacker.html
@@ -7,10 +7,8 @@
   <meta name="author" content="SitePoint">
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="onepage/onepage-scroll.css" type="text/css">
-
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
 </head>
-
 <body onload="styleMenuSelection()" style="overflow-y: auto;scroll-behavior: smooth">
  <section>
     	<div class="page-container">
@@ -25,6 +23,7 @@
     <div class="side_nav_item" id="collegebacker">collegebacker</div>
     <div class="side_nav_item" id="tesla">tesla</div>
     <div class="side_nav_item" id="orai">orai</div>
+    <div class="side_nav_item" id="cabinet">cabinet</div> 
     <br><br>
     <div class="side_nav_item" id="resume" style="text-decoration: underline;">resume</div>
   </div>
@@ -67,6 +66,7 @@
     var tesla = GetElementInsideContainer("side_nav","tesla");
     var maxis = GetElementInsideContainer("side_nav","maxis");
     var orai = GetElementInsideContainer("side_nav","orai");
+    var cabinet = GetElementInsideContainer("side_nav","cabinet");
 
     var projectPath = window.location.pathname.replace('/', '')
 
@@ -85,6 +85,9 @@
         break
       case 'maxis.html':
         maxis.style.fontWeight = 'bolder'
+        break
+      case 'cabinet.html':
+        cabinet.style.fontWeight = 'bolder'
         break
       case 'orai.html':
         orai.style.fontWeight = "bolder"
@@ -109,6 +112,7 @@
   var maxis = GetElementInsideContainer("side_nav","maxis");
   var collegebacker = GetElementInsideContainer("side_nav","collegebacker");
   var orai = GetElementInsideContainer("side_nav","orai");
+  var cabinet = GetElementInsideContainer("side_nav","cabinet");
 
     home.onclick = function () {
       location.href = "index.html";
@@ -127,6 +131,9 @@
     };
     orai.onclick = function (){
       location.href = "orai.html";
+    }
+    cabinet.onclick = function (){
+      location.href = "cabinet.html";
     }
     resume.onclick = function() {
       location ="https://www.dropbox.com/s/sdbqeb9p5i5b4wf/Resume_MelodyTing.pdf?dl=0"
