--- a/maxis.html
+++ b/maxis.html
@@ -22,6 +22,7 @@
         <div class="side_nav_item" id="collegebacker">collegebacker</div>
         <div class="side_nav_item" id="tesla">tesla</div>
         <div class="side_nav_item" id="orai">orai</div>
+        <div class="side_nav_item" id="cabinet">cabinet</div> 
         <br><br>
         <div class="side_nav_item" id="resume" style="text-decoration: underline;">resume</div>
   </div>
@@ -64,6 +65,7 @@
     var tesla = GetElementInsideContainer("side_nav","tesla");
     var maxis = GetElementInsideContainer("side_nav","maxis");
     var orai = GetElementInsideContainer("side_nav","orai");
+    var cabinet = GetElementInsideContainer("side_nav","cabinet");
 
     var projectPath = window.location.pathname.replace('/', '')
 
@@ -82,6 +84,9 @@
         break
       case 'maxis.html':
         maxis.style.fontWeight = 'bolder'
+        break
+      case 'cabinet.html':
+        cabinet.style.fontWeight = 'bolder'
         break
       case 'orai.html':
         orai.style.fontWeight = "bolder"
@@ -124,6 +129,9 @@
     };
     orai.onclick = function (){
       location.href = "orai.html";
+    };
+    cabinet.onclick = function (){
+      location.href = "cabinet.html";
     }
     resume.onclick = function() {
       location ="https://www.dropbox.com/s/sdbqeb9p5i5b4wf/Resume_MelodyTing.pdf?dl=0"
