--- a/tesla.html
+++ b/tesla.html
@@ -24,6 +24,7 @@
         <div class="side_nav_item" id="collegebacker">collegebacker</div>
         <div class="side_nav_item" id="tesla">tesla</div>
         <div class="side_nav_item" id="orai">orai</div>
+        <div class="side_nav_item" id="cabinet">cabinet</div> 
         <br><br>
         <div class="side_nav_item" id="resume" style="text-decoration: underline;">resume</div>
   	</div>
@@ -74,6 +75,7 @@
     var tesla = GetElementInsideContainer("side_nav","tesla");
     var maxis = GetElementInsideContainer("side_nav","maxis");
     var orai = GetElementInsideContainer("side_nav","orai");
+    var cabinet=GetElementInsideContainer("side_nav","cabinet");
 
     var projectPath = window.location.pathname.replace('/', '')
 
@@ -92,6 +94,9 @@
         break
       case 'maxis.html':
         maxis.style.fontWeight = 'bolder'
+        break
+      case 'cabinet.html':
+        cabinet.style.fontWeight = 'bolder'
         break
       case 'orai.html':
         orai.style.fontWeight = "bolder"
@@ -116,6 +121,7 @@
   var maxis = GetElementInsideContainer("side_nav","maxis");
   var collegebacker = GetElementInsideContainer("side_nav","collegebacker");
   var orai = GetElementInsideContainer("side_nav","orai");
+  var cabinet=GetElementInsideContainer("side_nav","cabinet");
 
     home.onclick = function () {
       location.href = "index.html";
@@ -134,7 +140,10 @@
     };
     orai.onclick = function (){
       location.href = "orai.html";
-    }
+    };
+     cabinet.onclick = function (){
+      location.href = "cabinet.html";
+    };   
     resume.onclick = function() {
       location ="https://www.dropbox.com/s/sdbqeb9p5i5b4wf/Resume_MelodyTing.pdf?dl=0"
     }
