--- a/cabinet.html
+++ b/cabinet.html
@@ -51,7 +51,7 @@
   <source src="Work_Documentation/cabinet/NFC.mp4" type="video/mp4">
   Your browser does not support the video tag.
   </video>
-  <p class="content">A working version of the NFC experience with the tappable bottles.</p>
+  <p class="content">A working version of the NFC experience with the tappable bottles.</p><br>
 
 </div>
 <script>
@@ -124,7 +124,7 @@
       location.href = "orai.html";
     }
     resume.onclick = function() {
-      location ="https://www.dropbox.com/s/sdbqeb9p5i5b4wf/Resume_MelodyTing.pdf?dl=0"
+      location.href ="resume.pdf"
     }
 </script>
 </body>
