--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   </div>
   <br><br>
 	<h2 class="subtitle">who am i</h2>
-	<p class="content">Melody Ting is a digital product designer. She graduated from Carnegie Mellon University with a Bachelor's degree in Cognitive Science and Art in 2018. She has experience designing across a variety of platforms, from creating UI for a <a href="/visceral.html"> Star Wars vehicle</a> to designing <a href="/tesla.html">data-heavy solutions </a> for Tesla's supply chain automation operations. </p><br>
+	<p class="content">Hello, I'm Melody. I'm a digital product designer specializing in designing intuitive solutions for data-intensive products. I'm passionate about creating impactful solutions with a user-centric approach and enjoy walking the fine line between art and design. I've had the opportunity to work on some cool projects, from creating UI for a <a href="/visceral.html"> Star Wars vehicle</a> to designing <a href="/tesla.html">semi-automated solutions </a> for Tesla's supply chain operations. </p><br>
   <p class="content"></p>
   <h2 class="subtitle">where i am now</h2>
-  <p class="content">You can find me designing in midtown NYC at <a href="https://www.virtualfacility.ai/">Virtual Facility</a>, creating facility automation software. </p>
+  <p class="content">You can find me designing in midtown NYC at <a href="https://www.virtualfacility.ai/">Virtual Facility</a>, creating facility automation software.</p>
 
 </div>
 <script>
@@ -111,7 +111,7 @@
       location.href = "cabinet.html";
     }
     resume.onclick = function() {
-      location ="https://www.dropbox.com/s/sdbqeb9p5i5b4wf/Resume_MelodyTing.pdf?dl=0"
+      location.href ="resume.pdf"
     }
 </script>
 </body>
