--- a/maxis.html
+++ b/maxis.html
@@ -50,7 +50,7 @@
         <h2 class="subtitle">daily reminders</h2>
         <p class="content">Stickering happens on two levels: as a daily interaction and a weekly voting contest. Players with the most votes are featured globally to all other players who then vote on their favorite finalist, who is then rewarded with in-game prizes. Players are incentivized to vote for other players in the daily round by receiving a small reward for completing the task as part of their Daily To Do List, which is a pre-existing set of rewarding tasks designed to encourage players to engage in all circles of the Sims world.</p>
         <img class="visuals" src="https://pro2-bar-s3-cdn-cf1.myportfolio.com/a9d5994869e24f0e572abe9b86b7383e/c2c0cbae-2b42-4ca3-a22f-bc409d648139_rw_1200.gif?h=6c478da188929f51ed7808e9073e8b39">
-        <h2 class="subtitle">stickering Interaction</h2>
+        <h2 class="subtitle">stickering interaction</h2>
         <p class="content">On the receiving end, players whose Sims have been given stickers are notified by whom they were given so as to encourage players to reciprocate the gesture.</p>
         <img class="visuals" src="https://pro2-bar-s3-cdn-cf.myportfolio.com/a9d5994869e24f0e572abe9b86b7383e/85f7301e-72a4-4ff9-9b26-cd5b117e4414_rw_1200.gif?h=d1f947f6cba275a4ca0297a4163a34cf">
         <h2 class="subtitle">retrospection</h2>
@@ -134,7 +134,7 @@
       location.href = "cabinet.html";
     }
     resume.onclick = function() {
-      location ="https://www.dropbox.com/s/sdbqeb9p5i5b4wf/Resume_MelodyTing.pdf?dl=0"
+      location.href ="resume.pdf"
     }
 </script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
