--- a/orai.html
+++ b/orai.html
@@ -130,7 +130,7 @@
       location.href = "cabinet.html";
     }
     resume.onclick = function() {
-      location ="https://www.dropbox.com/s/sdbqeb9p5i5b4wf/Resume_MelodyTing.pdf?dl=0"
+      location.href ="resume.pdf"
     }
 
 </script>
