--- a/visceral.html
+++ b/visceral.html
@@ -30,7 +30,7 @@
   	<h2 class="subtitle">overview</h2>
   	<p class="content">EA Visceral was a video game studio under the publisher Electronic Arts (EA). They specialized in third-person AAA games. In the summer of 2016 and from May-October of 2017, I interned as a UX/UI Design intern on their UX team. Throughout my time there, I worked on an undisclosed Star Wars game for console devices. In October 2017, EA shut down the studio and I was relocated to their Maxis studio.
 
-    The UX team at Visceral consisted of two full-time motion graphics/designers, four engineers, a QA engineer, and a product manager. Throughout my time there, I worked most closely with the two other designers to create motion mock ups, and UI. </p>
+    The UX team at Visceral consisted of two full-time motion graphics artists/designers, four engineers, a QA engineer, and a product manager. Throughout my time there, I worked most closely with the two other designers to create motion mock ups, and UI. </p>
   	<h2 class="subtitle">fictional UI</h2>
   	<p class="content">These screens were mock-ups for a new spaceship that was hijacked by the game protagonists from Imperial forces. As such, I looked to elements from the Star Wars Empire for inspiration for the interface elements and design.</p>
   	<img class="visuals" src="Work_Documentation/Mongoose.png">
@@ -122,7 +122,7 @@
       location.href = "cabinet.html";
     };
     resume.onclick = function() {
-      location ="https://www.dropbox.com/s/sdbqeb9p5i5b4wf/Resume_MelodyTing.pdf?dl=0"
+      location.href ="resume.pdf"
     }
 </script>
 </body>
