removed 'explore projects'

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
   <h2 class="subtitle">where i am now</h2>
   <p class="content">You can find me designing in midtown NYC at <a href="https://www.virtualfacility.ai/">Virtual Facility</a>, creating facility automation software.</p>
 
-  <h2 class="subtitle">explore projects</h2>
-  <!-- first row -->
-  <div class="row">
+<!--   <h2 class="subtitle">explore projects</h2>
+ -->  <!-- first row -->
+<!--   <div class="row">
     <div class="col" onclick="indexNav(this)" id="visceral_illo">
       <img class="inline_visual" src="visceral_illo.png">
       <img class="overlay_visual" src="visceral_overlay.png">
@@ -75,9 +75,9 @@
       <img class="overlay_visual" src="collegebacker_hover.png">
       <h3 class="caption">Collegebacker | UX </h3>
     </div>
-  </div>
+  </div> -->
 <!--second row-->    
-  <div class="row">
+<!--   <div class="row">
     <div class="col" onclick="indexNav(this)" id="cabinet_illo">
       <img class="inline_visual" src="cabinet_illo.png">
       <img class="overlay_visual" src="cabinet_overlay.png">
@@ -88,7 +88,7 @@
       <img class="overlay_visual" src="orai_overlay.png">
       <h3 class="caption">Orai | Product Design</h3>
   </div>
-  </div>
+  </div> -->
 </div>
 <script>
   function getGif(illo){
