--- a/maxis.html
+++ b/maxis.html
@@ -27,6 +27,7 @@
         <div class="side_nav_item" id="resume" style="text-decoration: underline;">resume</div>
   </div>
   <br><br>
+        <img class="visuals" style="width: 40%"src="Work_Documentation/maxis/sims_mockup.png">
         <h2 class="subtitle">overview</h2>
         <p class="content">From October to December 2017, I interned with the UX design team on Project Campfire at EA Maxis, working on the Sims Mobile app - the mobile adaptation from the popular franchise. I worked with designers, product managers, artists, and engineers to create a social networking feature on a game that has accumulated over 2 million downloads worldwide. The game is currently available for free download for Android and iOS devices.</p>
         <h2 class="subtitle">what I did</h2>
