--- a/visceral.html
+++ b/visceral.html
@@ -27,22 +27,23 @@
     <div class="side_nav_item" id="resume" style="text-decoration: underline;">resume</div>
   </div>
     <br><br>
+    <img class="visuals" style="width:40%" src="Work_Documentation/visceral/Visceral_Mockup2.png">
   	<h2 class="subtitle">overview</h2>
   	<p class="content">EA Visceral was a video game studio under the publisher Electronic Arts (EA). They specialized in third-person AAA games. In the summer of 2016 and from May-October of 2017, I interned as a UX/UI Design intern on their UX team. Throughout my time there, I worked on an undisclosed Star Wars game for console devices. In October 2017, EA shut down the studio and I was relocated to their Maxis studio.
 
     The UX team at Visceral consisted of two full-time motion graphics artists/designers, four engineers, a QA engineer, and a product manager. Throughout my time there, I worked most closely with the two other designers to create motion mock ups, and UI. </p>
   	<h2 class="subtitle">fictional UI</h2>
   	<p class="content">These screens were mock-ups for a new spaceship that was hijacked by the game protagonists from Imperial forces. As such, I looked to elements from the Star Wars Empire for inspiration for the interface elements and design.</p>
-  	<img class="visuals" src="Work_Documentation/Mongoose.png">
+  	<img class="visuals" src="Work_Documentation/visceral/Mongoose.png">
   	<h2 class="subtitle">user feedback indicators</h2>
   	<p class="content">One of the primary features I worked on was the design for enemy awareness meters. These were in-game UI elements that informed players how suspicious or "aware" the AI were of their presence during stealth play modes and are an integral part in any action-adventure game with AI.</p>
   	<video class="visuals" width="auto" height="auto" controls>
-  	<source src="AMMockup_YellowContract.mp4" type="video/mp4">
+  	<source src="Work_Documentation/visceral/AMMockup_YellowContract.mp4" type="video/mp4">
   	Your browser does not support the video tag.
   	</video>
   	<p class="content">Motion mock-ups allowed me to present UI in the context of the game and visualize how a user would encounter it in its various states.</p>
   	<video class="visuals" width="auto" height="auto" controls>
-  	<source src="Mongoose_Shield_Screen.mp4" type="video/mp4">
+  	<source src="Work_Documentation/visceral/Mongoose_Shield_Screen.mp4" type="video/mp4">
   	Your browser does not support the video tag.
   	</video>
     <br><br>
