--- a/cabinet.html
+++ b/cabinet.html
@@ -43,7 +43,7 @@
   <p class="content">I also created a set of user personas to visualize Cabinet's target user group. Russ and I worked together to identify four personas who shared similar lifestyle and purchasing habits, based on the data we were able to gather from the targeted ads and initial users.</p>
   <h2 class="subtitle">app experience</h2>
   <p class="content">In addition to conducting user research, I conceptualized and designed a digital experience for the NFC bottles that would surface key pieces of information - ingredients, uses, sourcing, etc. - when users tapped the bottles with their phones.</p>
-  <img class="visuals" src="Work_Documentation/cabinet/cabinet_experience.png">
+  <img class="visuals" src="Work_Documentation/cabinet/cabinet_experience.PNG">
   <p class="content">I created a site map to highlight key features followed by wireframes.</p>
   <img class="visuals" style="vertical-align: center; height: 60%" src="Work_Documentation/cabinet/Cabinet_Wires.png">
   <h2 class="subtitle">final version</h2>
